--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -29,17 +29,24 @@ jobs:
       run:
         working-directory: server
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          source: ./
-          destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: web-app-service/package-lock.json
+
+      - name: Install specific npm version
+        run: npm i -g npm@9.8.0
+
+      - name: Install dependencies
+        run: |
+          npm run install-deps
+          npm run build-deps
+          npm ci
+
+      - name: Build
+        run: npm run build
 
   # Deployment job
   deploy:
